// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App router component component initialize failure snapshot 1`] = `
<Fragment>
  <div>
    <AppWrapper>
      <main
        id="main"
      >
        <Alert
          variant="danger"
        >
          <ErrorPage
            message="If you experience repeated failures, please email support at test-support-url"
          />
        </Alert>
      </main>
    </AppWrapper>
  </div>
</Fragment>
`;

exports[`App router component component no network failure snapshot 1`] = `
<Fragment>
  <div>
    <AppWrapper>
      <main
        id="main"
      >
        <Dashboard />
      </main>
    </AppWrapper>
  </div>
</Fragment>
`;

exports[`App router component component no network failure with optimizely project id snapshot 1`] = `
<Fragment>
  <div>
    <AppWrapper>
      <main
        id="main"
      >
        <Dashboard />
      </main>
    </AppWrapper>
  </div>
</Fragment>
`;

exports[`App router component component no network failure with optimizely url snapshot 1`] = `
<Fragment>
  <div>
    <AppWrapper>
      <main
        id="main"
      >
        <Dashboard />
      </main>
    </AppWrapper>
  </div>
</Fragment>
`;

exports[`App router component component refresh failure snapshot 1`] = `
<Fragment>
  <div>
    <AppWrapper>
      <main
        id="main"
      >
        <Alert
          variant="danger"
        >
          <ErrorPage
            message="If you experience repeated failures, please email support at test-support-url"
          />
        </Alert>
      </main>
    </AppWrapper>
  </div>
</Fragment>
`;
